[tool.poetry]
name = "raster2dggs"
version = "0.2.7"
description = ""
authors = ["James Ardo <ardoj@landcareresearch.co.nz>"]
maintainers = ["Richard Law <lawr@landcareresearch.co.nz>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
repository = "https://github.com/manaakiwhenua/raster2dggs"
keywords = ["dggs", "raster", "h3", "cli"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.dependencies]
python = "^3.12"
gdal = ">=3.6,<3.8"
geopandas = "^0.12.2"
h3pandas = "^0.2.4"
rioxarray = "^0.13.4"
dask-geopandas = "^0.3.0"
pyarrow = "^14.0.1"
dask = "^2024.1.0"
click = "^8.1.3"
boto3 = "^1.26.85"
tqdm = "^4.66.4"
click-log = "^0.4.0"
rasterio = "^1.3.6"
dask-expr = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "*"

[tool.poetry.scripts]
raster2dggs = "raster2dggs.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88