[tool.poetry]
name = "raster2dggs"
version = "0.9.1"
description = ""
authors = ["James Ardo <ardoj@landcareresearch.co.nz>"]
maintainers = ["Richard Law <lawr@landcareresearch.co.nz>"]
readme = "README.md"
license = "LGPL-3.0-or-later"
repository = "https://github.com/manaakiwhenua/raster2dggs"
keywords = ["dggs", "raster", "h3", "rHEALPix", "cli"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[tool.poetry.dependencies]
python = "^3.11"
gdal = "^3.8"
geopandas = "^1.0"
rioxarray = "^0.19"
dask-geopandas = "^0.5"
pyarrow = "^20.0"
dask = "^2025.1"
click = "^8.1"
boto3 = "^1"
tqdm = "^4"
click-log = "^0.4"
rasterio = "^1.4"
dask-expr = "^2"
numpy = "^2"
geoarrow-pyarrow = "^0.2.0"
h3pandas = { version = "^0.3", optional = true }
rhppandas = {version = "^0.2", optional = true}
rhealpixdggs = {version = "^0.5", optional = true}
python-geohash = {version = "^0.8", optional = true}
maidenhead = {version = "^1.8", optional = true}
s2sphere = {version = "^0.2", optional = true}
a5-fast = {version = "^0.2", optional = true}
dggal = {version = "^0.0.6", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
twine ="*"
black = "*"

[tool.poetry.scripts]
raster2dggs = "raster2dggs.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.poetry.extras]
h3 = ["h3pandas"]
rhp = ["rhppandas","rhealpixdggs"]
geohash = ["python-geohash"]
maidenhead = ["maidenhead"]
s2 = ["s2sphere"]
a5 = ["a5-fast"]
isea4r = ["dggal"]
isea9r = ["dggal"]
isea3h = ["dggal"]
isea7h = ["dggal"]
isea7h_z7 = ["dggal"]
ivea4r = ["dggal"]
ivea9r = ["dggal"]
ivea3h = ["dggal"]
ivea7h = ["dggal"]
ivea7h_z7 = ["dggal"]
rtea4r = ["dggal"]
rtea9r = ["dggal"]
rtea3h = ["dggal"]
rtea7h = ["dggal"]
rtea7h_z7 = ["dggal"]
healpix = ["dggal"]
rhealpix = ["dggal"]
# Convenience extras
dggal = ["dggal"]
all = ["h3pandas", "rhppandas", "rhealpixdggs", "python-geohash", "s2sphere", "a5-fast", "maidenhead", "dggal"]